Fixes MeshtermTree expansion so overflow scrolls. Adds skeleton Error page, for 404 atm.
Former-commit-id: 3dc454904eb6bffdcd4b4b6bf0d7830751865bd3

--- a/code/winnow-ui/src/index.css
+++ b/code/winnow-ui/src/index.css
@@ -79,3 +79,11 @@ code {
     height: 70vh;
 }
 
+.super-treeview {
+    max-height: 60vh;
+    overflow-y: scroll;
+}
+.super-treeview div > * {
+    max-height: initial;
+    overflow-y: initial;
+}
